--- a/package.json
+++ b/package.json
@@ -103,13 +103,18 @@
     "shelljs": "^0.8.3",
     "ts-jest": "^26.4.4",
     "tslib": "^2.0.3",
+    "tsutils": "^3.17.1",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
     "eslint": "^5.0.0 || ^6.0.0 || ^7.0.0",
+    "tsutils": "^3.0.0",
     "typescript": "^3.4.1 || ^4.0.0"
   },
   "peerDependenciesMeta": {
+    "tsutils": {
+      "optional": true
+    },
     "typescript": {
       "optional": true
     }
