chore: switch to using typescript for the rollup config

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,4 @@
 {
   // Explicitly add js files that eslint complains about.
-  "include": ["cz-adapter/index.js"]
+  "include": ["rollup.config.js", "cz-adapter/index.js"]
 }
