--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "files.exclude": {
     ".nyc_output": true,
     "coverage": true,
+    "rollup.config.js": true,
     "cz-adapter/index.js": true
   },
   "files.trimTrailingWhitespace": true,
